styles/admin.css
html,
body {
  height: 100%;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  padding: 2em;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.login-form .fields {
  display: grid;
  grid-template-columns: auto 1fr;
  row-gap: 0.5em;
  column-gap: 1.5em;
  max-width: 300px;
  margin: 0 auto 1em;
}

.login-form button[type="submit"] {
  min-width: 200px;
}

.login-warning {
  font-size: 0.8em;
  max-width: 600px;
  margin: 0 auto;
  color: #444;
}

